--- a/ASPNETMVCCRUD/Views/Employees/Index.cshtml
+++ b/ASPNETMVCCRUD/Views/Employees/Index.cshtml
@@ -24,7 +24,7 @@
                 <td>@employee.Salary</td>
                 <td>@employee.DateOfBirth.ToString("dd-MM-YYYY")</td>
                 <td>@employee.Department</td>
-                <td><a href="Employees/View/@employee.Id">View</a></td>
+                <td><a href="Employees/Edit/@employee.Id">View</a></td>
             </tr>
         }
     </tbody>
