--- a/ASPNETMVCCRUD/Views/Employees/Edit.cshtml
+++ b/ASPNETMVCCRUD/Views/Employees/Edit.cshtml
@@ -35,14 +35,14 @@
     </div>*@
     <button type="submit"
             class="btn btn-primary"
-            asp-action=""
-            asp-controller="">
+            asp-action="Edit"
+            asp-controller="Employees">
         Submit
     </button>
     <button type="submit"
             class="btn btn-danger"
-            asp-action=""
-            asp-controller="">
+            asp-action="Delete"
+            asp-controller="Employees">
         Delete
     </button>
 </form>
